frontend/mtg/src/GuessTheMtgCard.css
.gameContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
}

.buttonContainer {
    flex-direction: column;
    flex: 1;
    padding: 12px;
}

.inputContainer {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.solutionContainer {
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.shareContainer {
    justify-content: center;
    padding: 2px;
}

.shareButton {   
    border-radius: 0px;
    background-color: #fbfbfb;
    color: #000000;
}

.dialog-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
}

.dialog-box {
    width: 50vw;
    height: auto;
    padding: 12px;
    text-align: center;
    border: none;
}

.dialog-box ul {
    text-align: left;
    margin: 0 auto 20px;
    padding-left: 20px;
    list-style: disc;
}

.confirmButton {
    height: 30;
    width: 30;
    flex: 1;
    border-radius: 0px;
    background-color: #fbfbfb;
    color: #000000;
}

